--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "busboy": "^1.6.0",
+    "form-data": "^4.0.3",
     "googleapis": "^150.0.1",
     "nodemailer": "^7.0.3"
   }
