--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "busboy": "^1.6.0",
     "form-data": "^4.0.3",
     "googleapis": "^150.0.1",
+    "multiparty": "^4.2.3",
     "nodemailer": "^7.0.3"
   }
 }
