--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "netlify dev",
-    "get-token": "node get-refresh-token.js"
+    "get-token": "node generate-oauth-url.js"
   },
   "keywords": [],
   "author": "",
