--- a/netlify.toml
+++ b/netlify.toml
@@ -8,27 +8,10 @@
 [functions."upload*"]
   timeout = 30
 
-
-# Configurazione CORS per localhost (sviluppo)
+# CORS globale per tutte le funzioni
 [[headers]]
   for = "/.netlify/functions/*"
   [headers.values]
-    Access-Control-Allow-Origin = "http://localhost:3000"
-    Access-Control-Allow-Methods = "POST, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type"
-
-# Configurazione CORS per dominio di staging
-[[headers]]
-  for = "/.netlify/functions/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "https://olamide.alotwebstudio.com"
-    Access-Control-Allow-Methods = "POST, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type"
-
-# Configurazione CORS per dominio di produzione
-[[headers]]
-  for = "/.netlify/functions/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "https://olamidedentaltechnology.co.uk"
-    Access-Control-Allow-Methods = "POST, OPTIONS"
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, OPTIONS"
     Access-Control-Allow-Headers = "Content-Type"
